--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <pl.droidsonroids.gif.GifImageView
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:text="Welcome to myresto!"/>
+
+    <Button
+        android:id="@+id/btn_menu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/myresto"/>
+        android:layout_height="100dp"
+        android:text="Pick Menu"
+        android:background="@android:color/holo_red_light"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:gravity="start|center_vertical"
+        android:padding="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/btn_scan"/>
+
+    <Button
+        android:id="@+id/btn_scan"
+        android:layout_width="match_parent"
+        android:layout_marginTop="2dp"
+        android:layout_height="100dp"
+        android:textSize="20sp"
+        android:gravity="start|center_vertical"
+        android:padding="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"
+        android:background="@color/black"
+        android:text="Scan Menu"/>
 
 </RelativeLayout>
